# drumini-clap

./: Cargo.toml  README.md
.github/workflows/: aur-upload.yml  ci.yml
src/: drum_engine.rs  kits.rs  lib.rs  params.rs
